--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   background-image: url('images/003.png');
 }
 .image10{
-  background-image: url('images/004.png');
+  background-image: url('images/004.jpg');
 }
 
 /* increase height of images for width > 792px */
