--- a/style.css
+++ b/style.css
@@ -31,10 +31,10 @@ body {
   background-image: url('images/001.png');
 }
 .image8{
-  background-image: url('images/002.png');
+  background-image: url('images/002.jpg');
 }
 .image9{
-  background-image: url('images/003.png');
+  background: no-repeat center/80% url('images/003.jpg');
 }
 .image10{
   /* background-image: url('images/004.jpg'); */
