--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   background-image: url('images/001.png');
 }
 .image8{
-  background-image: url('images/002.jpg');
+  background-image: url('images/002.png');
 }
 .image9{
   background: no-repeat center/80% url('images/003.jpg');
