--- a/style.css
+++ b/style.css
@@ -10,35 +10,28 @@ body {
   background-size: cover;
 }
 .image1{
-  background-image: url('https://storage.googleapis.com/voltweb/media/07633282-cd1b-4f50-8dae-3af3c7f64981.png');
+  background-image: url('images/001.jpg');
+  background-size: contain;
 }
 .image2{
-  background-image: url('https://storage.googleapis.com/voltweb/e478435c-8729-4678-ac04-e31c002a78e2.png')
+  background-image: url('images/002.jpg');
+  background-size: contain;
 }
 .image3{
-  background-image: url('https://storage.googleapis.com/voltweb/baf8c0af-2d78-49eb-a149-8442f4cf481e.png');
+  background-image: url('images/003.jpg');
+  background-size: contain;
 }
 .image4{
-  background-image: url('images/013.png');
+  background-image: url('images/004.jpg');
+  background-size: contain;
 }
 .image5{
-  background-image: url('images/011.png');
+  background-image: url('images/005.jpg');
+  background-size: contain;
 }
 .image6{
-  background-image: url('images/012.png');
-}
-.image7{
-  background-image: url('images/001.png');
-}
-.image8{
-  background-image: url('images/002.png');
-}
-.image9{
-  background: no-repeat center/50% url('images/003.jpg');
-}
-.image10{
-  /* background-image: url('images/004.jpg'); */
-  background: no-repeat center/50% url('images/004.jpg');
+  background-image: url('images/006.jpg');
+  background-size: contain;
 }
 
 /* increase height of images for width > 792px */
