--- a/style.css
+++ b/style.css
@@ -11,27 +11,27 @@ body {
 }
 .image1{
   background-image: url('images/001.png');
-  background-size: contain;
+  /* background-size: contain; */
 }
 .image2{
   background-image: url('images/002.png');
-  background-size: contain;
+  /* background-size: contain; */
 }
 .image3{
   background-image: url('images/003.png');
-  background-size: contain;
+  /* background-size: contain; */
 }
 .image4{
   background-image: url('images/004.png');
-  background-size: contain;
+  /* background-size: contain; */
 }
 .image5{
   background-image: url('images/005.png');
-  background-size: contain;
+  /* background-size: contain; */
 }
 .image6{
   background-image: url('images/006.jpg');
-  background-size: contain;
+  /* background-size: contain; */
 }
 
 /* increase height of images for width > 792px */
