--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
   /* background-size: contain; */
 }
 .image5{
-  background-image: url('images/005.png');
-  /* background-size: contain; */
+  background-image: url('images/007.jpg');
+  background-size: contain;
 }
 .image6{
   background-image: url('images/006.jpg');
