--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   /* background-size: contain; */
 }
 .image5{
-  background-image: url('images/007.jpg');
+  background-image: url('images/001.png');
   background-size: contain;
 }
 .image6{
