--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
   background-size: cover;
 }
 .image1{
-  background-image: url('images/001.jpg');
-  background-size: contain;
+  background-image: url('images/001.png');
+  /* background-size: contain; */
 }
 .image2{
   background-image: url('images/002.png');
@@ -30,7 +30,7 @@ body {
   /* background-size: contain; */
 }
 .image6{
-  background-image: url('images/006.jpg');
+  background-image: url('images/006.png');
   /* background-size: contain; */
 }
 
