--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   /* background-size: contain; */
 }
 .image8{
-  background-image: url('images/004.jpg');
+  background-image: url('images/004.png');
   background-size: contain;
 }
 
